--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <!-- navigation -->
        <header> 
         <h1>RUN BUDDY</h1>
+        <nav>
+            <!--Unordered list element-->
+            <ul>
+                <!--List item element-->
+                <li>
+                    <!--Anchor element-->
+                    <a href="#what-we-do">Wat We Do</a>
+                </li>
+                <li>
+                    <a href="#what-you-do">What You Do</a>
+                </li>
+                <li>
+                    <a href="#your-trainers">Reach out</a>
+                </li>
+            </ul>
+        </nav>
        </header>
         
     <!-- hero/jumbotron -->
