universal margin, padding change, inline style added to header

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8"/>
+        <link rel="stylesheet" href="style.css"/>
+        
         <title>Run Buddy</title>
+       
     </head>
 
     <body>
@@ -15,7 +18,7 @@
                 <!--List item element-->
                 <li>
                     <!--Anchor element-->
-                    <a href="#what-we-do">Wat We Do</a>
+                    <a href="#what-we-do">What We Do</a>
                 </li>
                 <li>
                     <a href="#what-you-do">What You Do</a>
