--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
 
     <!-- footer -->
     <footer>
+       <div> 
         <h2>❤️ Made with love by Run Buddy.</h2>
+      
+        <a href="#">Read Our Policy</a><br />&copy; 2019 Run Buddy, Inc.
+      </div>  
+
     </footer>
     </body>
     </html>
