--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
        </header>
         
     <!-- hero/jumbotron -->
-    <section>
+    <section class="hero">
         <div>
             <h2>Get Started Today</h2>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
