--- a/index.html
+++ b/index.html
@@ -33,29 +33,29 @@
     <!-- hero/jumbotron -->
     <section class="hero">
         <div class="hero-form">
-            <h2>Get Started Today</h2>
+            <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
             <!-- Add form elements -->        
-            <form>
+            <form> 
                 <label for="name">Enter full name:</label>
-                <input type="text" placeholder="Your Name"= name id="name" />
+                <input type="text" placeholder="Your Name" name="name" id="name" class="form input"/>
                 <label for="email">Enter email Address:</label>
-                <input type="email" placeholder="Email Address" name id="email" />
+                <input type="email" placeholder="Email Address" name="name" id="email" class="form input"/>
                 <label for="phone">Enter a telephone number:</label>
-                <input type="tel" placeholder="Phone Number" name="phone" id="phone" />
-                <p>
+                <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form input"/>  
+            <p>
                     Have you worked out with a trainer before?
                     <input type="radio" name="trainer-confirm" id="trainer-yes" />
                     <label for="trainer-yes">Yes</label>
                     <input type="radio" name="trainer-confirm" id="trainer-no" />
                     <label for="trainer-no">No</label>          
-                </p>        
-                <p>
-                    <label for="checkbox" > 
+            </p>        
+            <p>
+                    <label for="checkbox"> 
                     I acknowledge that I am at least 18 years of age.
                     </label>
                     <input type="checkbox" name="age-confirm" id="checkbox" />
-                </p>
+            </p>
                 <button type="submit">
                     Get running!
                 </button>                         
@@ -65,13 +65,37 @@
 <!-- end hero -->
 
     <!-- "what we do" section -->
-    <section>
-       <h2>What We Do</h2>  
+<section id="what-we-do">
+       <h2>What We Do</h2>
+       <p>I thinks thought scarab of endangering cryts apple diamond looks very meandering for their repercussions for the follow jurisdiction is invalid sike.</p>  
     </section>
 
     <!-- "what you do" section-->
-    <section>
+<section id="what-you-do">
         <h2>What You Do</h2>
+
+        <div>
+            <img src="./assets/images/step-1.svg" alt="" />
+            <h3>Step 1: Fill Out the Form Above.</h3>
+            <p>You're already here, so why not?</p>
+        </div>
+
+        <div>
+            <img src="./assets/images/step-2.svg" alt="" />
+            <h3>Step 2: Consult with One of Our Trainers.</h3>
+            <p>Are you here to build muscle, lose weight, or just feel good?</p>
+
+            <div>
+                <img src="./assets/images/step-3.svg" alt="" />
+                <h3>Step 3: Get Running.</h3>
+                <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+              </div>
+            
+              <div>
+                <img src="./assets/images/step-4.svg" alt="" />
+                <h3>Step 4: See Results.</h3>
+                <p>Bi-weekly check ins with your trainer will keep you focused</p>
+          </div>
     </section>
 
     <!-- "Meet the trainers" section-->
