--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 <!-- end hero -->
 
     <!-- "what we do" section -->
-<section id="what-we-do">
+<section id="what-we-do" class="intro">
        <h2>What We Do</h2>
-       <p>I thinks thought scarab of endangering cryts apple diamond looks very meandering for their repercussions for the follow jurisdiction is invalid sike.</p>  
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam qui, ratione dolore dicta exercitationem possimus commodi sit, officia quia recusandae esse temporibus voluptates repellat reprehenderit blanditiis unde eum? Ipsum, repellendus.</p>  
     </section>
 
     <!-- "what you do" section-->
