hero form corrected

--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
        
     </head>
 
-    <body>
+<body>
     <!-- navigation -->
-       <header> 
+ <header> 
         <h1>RUN BUDDY</h1>
-        <nav>
-            <!--Unordered list element-->
-            <ul>
-                <!--List item element-->
-                <li>
-                    <!--Anchor element-->
-                    <a href="#what-we-do">What We Do</a>
-                </li>
-                <li>
-                    <a href="#what-you-do">What You Do</a>
-                </li>
-                <li>
-                    <a href="#your-trainers">Reach out</a>
-                </li>
-            </ul>
-        </nav>
-       </header>
+      <nav>
+        <!--Unordered list element-->
+        <ul>
+        <!--List item element-->
+        <li>
+            <!--Anchor element-->
+            <a href="#what-we-do">What We Do</a>
+        </li>
+        <li>
+            <a href="#what-you-do">What You Do</a>
+        </li>
+        <li>
+            <a href="#your-trainers">Reach out</a>
+        </li>
+        </ul>
+      </nav>
+ </header>
         
     <!-- hero/jumbotron -->
     <section class="hero">
@@ -38,11 +38,11 @@
             <!-- Add form elements -->        
             <form> 
                 <label for="name">Enter full name:</label>
-                <input type="text" placeholder="Your Name" name="name" id="name" class="form input"/>
+                <input type="text" placeholder="Your Name" name="name" id="name" class="form-input"/>
                 <label for="email">Enter email Address:</label>
-                <input type="email" placeholder="Email Address" name="name" id="email" class="form input"/>
+                <input type="email" placeholder="Email Address" name="email" id="email" class="form-input"/>
                 <label for="phone">Enter a telephone number:</label>
-                <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form input"/>  
+                <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input"/>  
             <p>
                     Have you worked out with a trainer before?
                     <input type="radio" name="trainer-confirm" id="trainer-yes" />
@@ -67,7 +67,11 @@
     <!-- "what we do" section -->
 <section id="what-we-do" class="intro">
        <h2 class="section-title primary-border">What We Do</h2>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam qui, ratione dolore dicta exercitationem possimus commodi sit, officia quia recusandae esse temporibus voluptates repellat reprehenderit blanditiis unde eum? Ipsum, repellendus.</p>  
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam qui, 
+           ratione dolore dicta exercitationem possimus commodi sit, officia quia 
+           recusandae esse temporibus voluptates repellat reprehenderit blanditiis 
+           unde eum? Ipsum, repellendus.
+        </p>  
     </section>
 
     <!-- "what you do" section-->
@@ -112,7 +116,8 @@
     <footer>
         <h2>❤️ Made with love by Run Buddy.</h2>
       <div>
-        <a href="#">Read Our Policy</a><br />&copy; 2019 Run Buddy, Inc.
+        <a href="#">Read Our Policy</a><br />
+        &copy; 2019 Run Buddy, Inc.
       </div>  
 
     </footer>
