--- a/index.html
+++ b/index.html
@@ -124,7 +124,11 @@
           <div class="trainer-bio text-left">
             <h3>Arron Stephens</h3>
             <h4>Speed / Strength</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+              Sequi neque animi quo cupiditate commodi saepe culpa sed itaque 
+              velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!  
+            </p>
           </div>
         </article>
   
